--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -38,7 +38,7 @@
 
                                 <hr/>
 
-                                <p:dataTable rowKey="#{medved.meno}-#{medved.id}" var="medved"
+                                <p:dataTable rowKey="#{medved.meno}-#{medved.vek}-#{medved.id}" var="medved"
                                              value="#{medvedModel.medvede}"
                                              paginator="false"
                                              selection="#{flowMedvedModel.aktualnyMedved}"
@@ -52,6 +52,10 @@
 
                                     <p:column headerText="Meno">
                                         <h:outputText value="#{medved.meno}"/>
+                                    </p:column>
+
+                                    <p:column headerText="Vek">
+                                        <h:outputText value="#{medved.vek}"/>
                                     </p:column>
                                 </p:dataTable>
                                 <hr/>
